--- a/RISV-V CODE/DA1.qsf
+++ b/RISV-V CODE/DA1.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSXFC6D6F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY ALU_UNIT
+set_global_assignment -name TOP_LEVEL_ENTITY ADDER_32bits
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "19:51:03  MARCH 16, 2025"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
@@ -63,12 +63,12 @@ set_global_assignment -name SYSTEMVERILOG_FILE ADDER_32bits.sv
 set_global_assignment -name VECTOR_WAVEFORM_FILE TEST_ADDER.vwf
 set_global_assignment -name VECTOR_WAVEFORM_FILE TEST.vwf
 set_global_assignment -name SYSTEMVERILOG_FILE ADDER_32bits_TB.sv
-set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS NOT_USED -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH COMPARATOR_32bits_TB -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH ADDER_32bits_TB -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME ADDER_32bits_TB -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id ADDER_32bits_TB
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME ADDER_32bits_TB -section_id ADDER_32bits_TB
-set_global_assignment -name EDA_RUN_TOOL_AUTOMATICALLY OFF -section_id eda_simulation
+set_global_assignment -name EDA_RUN_TOOL_AUTOMATICALLY ON -section_id eda_simulation
 set_global_assignment -name SYSTEMVERILOG_FILE REGISTER_FILE.sv
 set_global_assignment -name VECTOR_WAVEFORM_FILE REGISTER_FILE_TEST.vwf
 set_global_assignment -name SYSTEMVERILOG_FILE ADDER_4bits.sv
@@ -76,11 +76,9 @@ set_global_assignment -name VECTOR_WAVEFORM_FILE ADDER_4Bits_TEST.vwf
 set_global_assignment -name SYSTEMVERILOG_FILE EXTEND_UNIT.sv
 set_global_assignment -name VECTOR_WAVEFORM_FILE EXTEND_UNIT_TEST.vwf
 set_global_assignment -name SYSTEMVERILOG_FILE COMPARATOR_32bits_TB.sv
-set_global_assignment -name EDA_TEST_BENCH_FILE ADDER_32bits_TB.sv -section_id ADDER_32bits_TB
 set_global_assignment -name EDA_TEST_BENCH_NAME COMPARATOR_32bits_TB -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id COMPARATOR_32bits_TB
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME COMPARATOR_32bits_TB -section_id COMPARATOR_32bits_TB
-set_global_assignment -name EDA_TEST_BENCH_FILE COMPARATOR_32bits_TB.sv -section_id COMPARATOR_32bits_TB
 set_global_assignment -name SYSTEMVERILOG_FILE UNIVERSAL_SHIFTER.sv
 set_global_assignment -name VECTOR_WAVEFORM_FILE BARREL_SHIFTER_TEST.vwf
 set_global_assignment -name SYSTEMVERILOG_FILE DATA_MEMORY.sv
@@ -90,8 +88,22 @@ set_global_assignment -name SYSTEMVERILOG_FILE ALU_UNIT.sv
 set_global_assignment -name SYSTEMVERILOG_FILE MUX_2x1.sv
 set_global_assignment -name SYSTEMVERILOG_FILE MUX_2x1_32Bits.sv
 set_global_assignment -name VECTOR_WAVEFORM_FILE ALU_UNIT_TEST.vwf
+set_global_assignment -name SYSTEMVERILOG_FILE BRANCH_COMPARE_UNIT.sv
+set_global_assignment -name VECTOR_WAVEFORM_FILE BRANCH_COMPARE_UNIT_TEST.vwf
+set_global_assignment -name SYSTEMVERILOG_FILE BRANCH_COMPARE_UNIT_TB.sv
+set_global_assignment -name EDA_TEST_BENCH_NAME BRANCH_COMPARE_UNIT_TB -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id BRANCH_COMPARE_UNIT_TB
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME BRANCH_COMPARE_UNIT_TB -section_id BRANCH_COMPARE_UNIT_TB
+set_global_assignment -name VECTOR_WAVEFORM_FILE INSTRUCTION_MEMORY_TEST.vwf
+set_global_assignment -name VECTOR_WAVEFORM_FILE DATA_MEMORY_TEST.vwf
+set_global_assignment -name VECTOR_WAVEFORM_FILE CONTROL_UNIT_TEST.vwf
+set_global_assignment -name SYSTEMVERILOG_FILE Top.sv
+set_global_assignment -name SYSTEMVERILOG_FILE MUX_3x1_32Bits.sv
+set_global_assignment -name VECTOR_WAVEFORM_FILE TOP_TEST.vwf
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name EDA_TEST_BENCH_FILE ADDER_32bits_TB.sv -section_id ADDER_32bits_TB
+set_global_assignment -name EDA_TEST_BENCH_FILE COMPARATOR_32bits_TB.sv -section_id COMPARATOR_32bits_TB
+set_global_assignment -name EDA_TEST_BENCH_FILE BRANCH_COMPARE_UNIT_TB.sv -section_id BRANCH_COMPARE_UNIT_TB
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
-set_global_assignment -name SYSTEMVERILOG_FILE BRANCH_COMPARE_UNIT.sv
